owerwrite by infrastructure code in this repo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,85 +1,58 @@
-version: '3.0'
+version: "3"
 services:
-  botfront:
-    image: 'botfront/botfront:v0.17.2'
-    container_name: botfront-app
-    restart: always
-    networks:
-      - botfront-network
-    volumes:
-      - './models/:/app/models'
+  chatbot-ui:
+    build: ../aj-ukraine
+    image: aj/ukraine
     ports:
-      - '8888:3000'
-    depends_on:
-      - mongo
-    env_file:
-      - .env
+      - "3000:3000"
+
+  bff:
+    build:
+      context: ../aj-georgia
+      args:
+        - "IMAGE_VERSION=dc-local"
+    image: aj/georgia
+    ports:
+      - "8089:8080"
     environment:
-      PORT: 3000
-  botfront-api:
-    image: 'botfront/botfront-api:v0.17.2'
-    container_name: botfront-api
-    networks:
-      - botfront-network
-    restart: always
+      - "SPRING_PROFILES_ACTIVE=prod"
+
+  rasa-server:
+    build: ../aj-estonia
+    image: aj/estonia
     depends_on:
-      - mongo
+      - rasa-mongo
     ports:
-      - '8080:8080'
-    env_file:
-      - .env
-  # rasa:
-  #   image: 'botfront/rasa-for-botfront:v1.3.9-bf.1'
-  #   container_name: botfront-rasa
-  #   networks:
-  #     - botfront-network
-  #   restart: always
-  #   ports:
-  #     - '5005:5005'
-  #   depends_on:
-  #     - botfront-api
-  #   volumes:
-  #     - './models/:/app/models'
-  #   env_file:
-  #     - .env
-  actions:
-    image: 'rasa/rasa-sdk:1.3.2'
-    container_name: botfront-actions
-    networks:
-      - botfront-network
-    restart: always
-    ports:
-      - '5055:5055'
+      - "5005:5005"
+    links:
+      - rasa-actions-server:actions
+      - rasa-mongo:mongo
     volumes:
-      - './actions:/app/actions'
-    command:
-      - start
-      - '--debug'
-      - '--actions'
-      - actions
-    env_file:
-      - .env
-  duckling:
-    image: 'botfront/duckling:latest'
-    container_name: botfront-duckling
-    networks:
-      - botfront-network
-    restart: always
+      - ../aj-estonia/models/:/app/models
+
+  rasa-actions-server:
+    build: ../aj-lithuania
+    image: aj/lithuania
     ports:
-      - '8000:8000'
-  mongo:
-    image: 'mongo:latest'
-    container_name: botfront-mongo
-    restart: always
-    networks:
-      - botfront-network
+      - "5055:5055"
+
+  rasa-mongo:
+    image: "mongo:latest"
     volumes:
-      - './botfront-db:/data/db'
+      - ../aj-estonia/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+      - ../aj-estonia/rasa-db:/data/db
     ports:
-      - '27017:27017'
+      - "27017:27017"
     env_file:
-      - .env
-networks:
-  botfront-network: {}
-volumes:
-  botfront-db: null
+      - ../aj-estonia/.env
+
+  custom-actions:
+    build:
+      context: ../aj-latvia
+      args:
+        - "IMAGE_VERSION=dc-local"
+    image: aj/latvia
+    ports:
+      - "8088:8080"
+    environment:
+      - "SPRING_PROFILES_ACTIVE=prod"
