[TECH] update chatbot-ui dockerfile
Co-authored-by: sause <lazureys@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3"
 services:
-  # chatbot-ui:
-  #   build: ../aj-ukraine
-  #   image: aj/ukraine
-  #   ports:
-  #     - "3000:3000"
+  chatbot-ui:
+    build: ../aj-ukraine
+    image: aj/ukraine
+    ports:
+      - "3000:80"
 
   bff:
     build:
